# LS2025-GH-actions

./: app.py  pyproject.toml
.github/: semgrep.yml
.github/workflows/: gitleaks.yml  grype.yml  regfinder.yml  semgrep.yml
