[project]
name = "ls2025-gh-actions"
version = "0.1.0"
description = ""
authors = [
    {name = "Matej Smycka",email = "Smycka@ics.muni.cz"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (==0.3.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
